code25_all/scala/17045999.txt
[user@host spark-0.7.2]$ ./run spark.examples.LocalPi
$ scalac PiEstimate.scala
PiEstimate.scala:1: error: not found: object spark
import spark.SparkContext
       ^

